--- a/package.json
+++ b/package.json
@@ -10,8 +10,18 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@types/js-yaml": "^4.0.5",
     "nodemon": "^2.0.22",
+    "prisma": "^4.12.0",
     "ts-node": "^10.9.1",
     "typescript": "^5.0.4"
+  },
+  "dependencies": {
+    "@prisma/client": "^4.12.0",
+    "discord.js": "^14.9.0",
+    "dotenv": "^16.0.3",
+    "js-yaml": "^4.1.0",
+    "sqlite3": "^5.1.6",
+    "zod": "^3.21.4"
   }
 }
