--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev": "nodemon --exec ts-node src/main.ts"
+    "dev": "nodemon --exec ts-node src/main.ts | pino-pretty"
   },
   "keywords": [],
   "author": "",
@@ -12,6 +12,7 @@
   "devDependencies": {
     "@types/js-yaml": "^4.0.5",
     "nodemon": "^2.0.22",
+    "pino-pretty": "^10.0.0",
     "prisma": "^4.12.0",
     "ts-node": "^10.9.1",
     "typescript": "^5.0.4"
@@ -21,6 +22,7 @@
     "discord.js": "^14.9.0",
     "dotenv": "^16.0.3",
     "js-yaml": "^4.1.0",
+    "pino": "^8.11.0",
     "sqlite3": "^5.1.6",
     "zod": "^3.21.4"
   }
