--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
   },
   "dependencies": {
     "@prisma/client": "^4.12.0",
+    "@tensorflow-models/toxicity": "^1.2.2",
+    "@tensorflow/tfjs": "^3.9.0",
     "discord.js": "^14.9.0",
     "dotenv": "^16.0.3",
     "js-yaml": "^4.1.0",
